# agile-cx-feedback-roadmap-system

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/agile_cx_roadmap/api/: db.py  main.py
app/agile_cx_roadmap/backlog/: prioritization.py  story_generator.py
app/agile_cx_roadmap/dashboard/: data.py  streamlit_app.py
app/agile_cx_roadmap/reports/: sprint_report.py
app/agile_cx_roadmap/sprints/: planner.py
reports/: sprint-1-sprint-1-access-and-billing-reliability-review.md  sprint-6-sprint-5-cx-roadmap-execution-review.md
scripts/: db_check.py  generate_backlog.py  generate_sprint_report.py  generate_user_stories.py  plan_sprint.py  seed_data.py
sql/: 001_schema.sql
sql/analytics/: 001_feedback_theme_summary.sql  002_backlog_priority_scores.sql  003_sprint_health.sql  004_release_impact.sql  005_customer_evidence_by_backlog_item.sql
