[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-cx-feedback-roadmap-system"
version = "0.1.0"
description = "A local Agile CX Operations portfolio project that converts support feedback into prioritized backlog items, sprint plans and release impact reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

dashboard = [
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
]

api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app"]
